--- a/themes/blank/layouts/_default/single.html
+++ b/themes/blank/layouts/_default/single.html
@@ -1,8 +1,10 @@
 {{ define "main" }}
-	<main>
+	<main class="long-form">
 		<article>
-			<h1>{{ .Title }}</h1>
-			<time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "02.01.2006 15:04" }}</time>
+        <div class="post-top">
+          <h1>{{ .Title }}</h1>
+			    <time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "02.01.2006 15:04" }}</time>
+        </div>
 			<div>
 				{{ .Content }}
 			</div>
