Add site navigation, about section, remove footer, and layout enhancements

--- a/themes/blank/layouts/index.html
+++ b/themes/blank/layouts/index.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-	<main>
+	
+  <main>
+    {{ partial "hero" . }}
 		{{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
 		{{ range $paginator.Pages }}
 			{{ .Render "summary" }}
