--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -13,8 +13,7 @@
 </head>
 <body>
 	{{ partial "header" . }}
-  {{ partial "hero" . }}
 	{{ block "main" . }}{{ end }}
-	{{ partial "footer" . }}
+	<!-- {{ partial "footer" . }} -->
 </body>
 </html>
