--- a/themes/blank/layouts/partials/header.html
+++ b/themes/blank/layouts/partials/header.html
@@ -2,13 +2,15 @@
 	<a class="logo" href="{{ .Site.BaseURL }}">
     {{ .Site.Title }}
   </a>
-	{{ with .Site.Menus.main }}
-	<nav>
-		<ul>
-			{{ range . }}
-			<li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
-			{{ end }}
-		</ul>
-	</nav>
-	{{ end }}
+
+<ul class="site-nav">
+      {{ $currentPage := . }}
+      {{ range .Site.Menus.main }}  
+      <li >
+          <a class="{{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}active{{ end }}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
+      </li>
+      {{ end }}
+  </ul>
+
+
 </header>
