--- a/themes/blank/layouts/_default/about.html
+++ b/themes/blank/layouts/_default/about.html
@@ -1,10 +1,7 @@
 {{ define "main" }}
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-8">{{ .Content }}
-        </div>
-    </div>
+<div class="container long-form">
+  {{ .Content }}
 </div>
 
 {{ end }}
