--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,20 +1,23 @@
 <article>
-	<time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
-  <h3>
-    <a href="{{ .Permalink }}">{{ .Title }}</a>
-  </h3>
   
-  {{ range .Params.tags }}
-	<a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
-	{{ end }}
+  <div class="meta">
+	  <time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
+  </div>
   
-  <div>
-		{{ .Summary }}
-		{{ if .Truncated }}
-			<a href="{{ .Permalink }}">Read more...</a>
-		{{ end }}
-	</div>
-  
-  {{ with .Resources.GetMatch .Params.featured_image }} <img alt="..." class="..." src="{{ .RelPermalink }}" /> {{ end }}
+  <div class="content">
+    <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
+    {{ range .Params.tags }}
+	  <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+	  {{ end }}
+    <div>
+		  {{ .Summary }}
+		  {{ if .Truncated }}
+			  <a href="{{ .Permalink }}">Read more...</a>
+		  {{ end }}
+	  </div>
+    {{ with .Resources.GetMatch .Params.featured_image }}
+      <img alt="..." class="..." src="{{ .RelPermalink }}" />
+    {{ end }}
+  </div>
   
 </article>
