--- a/themes/blank/layouts/partials/header.html
+++ b/themes/blank/layouts/partials/header.html
@@ -1,15 +1,16 @@
 <header>
-	<a class="logo" href="{{ .Site.BaseURL }}">
-    {{ .Site.Title }}
+	<a class="logo h-stack" href="{{ .Site.BaseURL }}">
+    <img class="profile" src="{{ .Site.BaseURL }}img/avatar.png">
+    <!-- {{ .Site.Title }} -->
   </a>
 
-<ul class="site-nav">
-      {{ $currentPage := . }}
-      {{ range .Site.Menus.main }}  
-      <li >
-          <a class="{{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}active{{ end }}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
-      </li>
-      {{ end }}
+  <ul class="site-nav">
+    {{ $currentPage := . }}
+    {{ range .Site.Menus.main }}  
+    <li >
+      <a class="{{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}active{{ end }}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
+    </li>
+    {{ end }}
   </ul>
 
 
