--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('variables.css');
+
  /* Josh's Custom CSS Reset https://www.joshwcomeau.com/css/custom-css-reset/ */
  *, *::before, *::after {box-sizing: border-box;}* {margin: 0;}body {line-height: 1.5;-webkit-font-smoothing: antialiased;}img, picture, video, canvas, svg {display: block;max-width: 100%;}input, button, textarea, select {font: inherit;}p, h1, h2, h3, h4, h5, h6 {overflow-wrap: break-word;}#root, #__next {isolation: isolate;}
 
@@ -47,7 +49,7 @@ body {
   margin: 0 auto;
   padding: 64px;
   font-family: "Messina Sans";
-  font-size: 20px;
+  font-size: var(--font-base);
   line-height: 1.55;
   background-color: #16161D;
   color: white;
@@ -156,8 +158,11 @@ article img {
 }
 
 .long-form h1 {
-  margin-bottom: 64px;
+  margin-bottom: 48px;
 }
+
+.long-form h2 { font-size: 40px; }
+.long-form h3 { font-size: 32px; }
 
 .long-form p img {
   max-width: 100%;
