latest changes and improvements

--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,5 +1,5 @@
 <div class="hero">
-  Hello, I'm Jitachi. <br>
+  <h1>Hello, I'm Jitachi. <br>
   Software Designer at <a href="http://railway.app">Railway.</a><br>
-  Curious and stubborn.
+  Curious and stubborn.</h1>
 </div>
