--- a/themes/blank/layouts/_default/single.html
+++ b/themes/blank/layouts/_default/single.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
-	<main class="long-form">
-      <div class="post-top">
+	<main>
+      <div class="page-title">
         <h1>{{ .Title }}</h1>
-		    <time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "02.01.2006 15:04" }}</time>
+        <p class="meta"><time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "Jan 2, 2006" }}</time></p>
       </div>
-		<div>
+		<div class="long-form">
 			{{ .Content }}
 		</div>
 		{{ with .Params.tags }}
