--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -1,63 +1,20 @@
+@import url('type.css');
 @import url('variables.css');
 
- /* Josh's Custom CSS Reset https://www.joshwcomeau.com/css/custom-css-reset/ */
- *, *::before, *::after {box-sizing: border-box;}* {margin: 0;}body {line-height: 1.5;-webkit-font-smoothing: antialiased;}img, picture, video, canvas, svg {display: block;max-width: 100%;}input, button, textarea, select {font: inherit;}p, h1, h2, h3, h4, h5, h6 {overflow-wrap: break-word;}#root, #__next {isolation: isolate;}
-
-@font-face {
-  font-family: "Recife Text";
-  src: url("../type/recife-text/RecifeTextWeb-Regular.eot");
-  src: url("../type/recife-text/RecifeTextWeb-Regular.eot?#iefix") format("embedded-opentype"),
-       url("../type/recife-text/RecifeTextWeb-Regular.woff2") format("woff2"),
-       url("../type/recife-text/RecifeTextWeb-Regular.woff") format("woff"),
-       url("../type/recife-text/RecifeTextWeb-Regular.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Recife Text";
-  src: url("../type/recife-text/RecifeTextWeb-Bold.eot");
-  src: url("../type/recife-text/RecifeTextWeb-Bold.eot?#iefix") format("embedded-opentype"),
-       url("../type/recife-text/RecifeTextWeb-Bold.woff2") format("woff2"),
-       url("../type/recife-text/RecifeTextWeb-Bold.woff") format("woff"),
-       url("../type/recife-text/RecifeTextWeb-Bold.ttf") format("truetype");
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Messina Sans";
-  src: url("../type/messina-sans/MessinaSansWeb-Regular.eot");
-  src: url("../type/messina-sans/MessinaSansWeb-Regular.eot?#iefix") format("embedded-opentype"),
-       url("../type/messina-sans/MessinaSansWeb-Regular.woff2") format("woff2"),
-       url("../type/messina-sans/MessinaSansWeb-Regular.woff") format("woff"),
-       url("../type/messina-sans/MessinaSansWeb-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: "Messina Sans";
-  src: url("../type/messina-sans/MessinaSansWeb-Bold.eot");
-  src: url("../type/messina-sans/MessinaSansWeb-Bold.eot?#iefix") format("embedded-opentype"),
-       url("../type/messina-sans/MessinaSansWeb-Bold.woff2") format("woff2"),
-       url("../type/messina-sans/MessinaSansWeb-Bold.woff") format("woff"),
-       url("../type/messina-sans/MessinaSansWeb-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
+ /* Josh's Custom CSS Reset https://www.joshwcomeau.com/css/custom-css-reset/ */ *, *::before, *::after {box-sizing: border-box;}* {margin: 0;}body {line-height: 1.5;-webkit-font-smoothing: antialiased;}img, picture, video, canvas, svg {display: block;max-width: 100%;}input, button, textarea, select {font: inherit;}p, h1, h2, h3, h4, h5, h6 {overflow-wrap: break-word;}#root, #__next {isolation: isolate;}
 
 body {
   max-width: 1320px;
   margin: 0 auto;
   padding: 64px;
-  font-family: "Messina Sans";
+  font-family: var(--font-family-sans);
   font-size: var(--font-base);
   line-height: 1.55;
   background-color: #16161D;
   color: white;
 }
 
-a {
-  color: white;
-}
+a { color: white; }
 
 header {
   display: flex;
@@ -66,26 +23,25 @@ header {
 
 .logo, .site-nav li a {
   text-decoration: none;
-  font-family: "Messina sans";
   font-size: 16px;
 }
 
 .profile {
   border-radius: 16px;
   height: 32px;
+  min-width: 32px;
   border: 1px solid white;
+  display: block;
 }
 
  ul.site-nav {
    display: flex;
    padding-inline-start: 0px;
  }
-
 .site-nav li {
   list-style: none;
   margin-left: 8px;
 }
-
 .site-nav li a {
   text-decoration: none;
   padding: 8px 16px;
@@ -102,15 +58,14 @@ header {
   color: #16161D;
 }
 
-article time {
+time {
   font-family: "Messina sans";
   opacity: .5;
   font-size: 18px;
 }
 
-header, main {
-  margin-bottom: 160px;
-}
+header, main { margin-bottom: 160px; }
+
 
 /* Homepage Listing */
 
@@ -126,48 +81,108 @@ article .meta {
 }
 
 article h3 a {
-  font-family: "Messina sans";
   font-weight: 600;
   text-decoration: none;
-  letter-spacing: -.025em;
 }
 
 article img {
   margin-top: 24px;
 }
 
-.long-form p {
-  padding-bottom: 24px;
+/* Single Page */
+
+.page-title {
+  margin-bottom: 128px;
 }
 
-.post-top {
-  margin-bottom: 24px;
+.hero, .long-form h1 { margin-bottom: 160px; }
+
+hr {
+  border: none;
+  border-top: 2px dotted #999;
+  color: #999;
+  background-color: transparent;
+  height: 1px;
+  margin: 48px auto;
+  max-width: 800px;
 }
 
-.long-form p {
-  max-width: 70ch;
+.long-form h1,
+.long-form h2,
+.long-form h3,
+.long-form h4,
+.long-form h5,
+.long-form h6,
+.long-form p,
+.long-form ul,
+.long-form ol,
+.long-form pre {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  letter-spacing: -0.0125em;
+  margin-bottom: .5em;
 }
 
-.hero, .long-form h1 {
-  font-family: "Messina sans";
-  font-size: 80px;
+h1 {
+  font-size: var(--font-size-display);
   font-weight: 700;
   line-height: 112.5%;
-  letter-spacing: -.03em;
-  margin-bottom: 160px;
+  letter-spacing: -.0375em;
 }
 
-.long-form h1 {
-  margin-bottom: 48px;
+.long-form h2 {
+  font-size: var(--font-size-larger);
+}
+.long-form h3 {
+  font-size: var(--font-size-larger);
 }
 
-.long-form h2 { font-size: 40px; }
-.long-form h3 { font-size: 32px; }
+.long-form h4 {
+  font-size: var(--font-size-large);
+}
 
-.long-form p img {
-  max-width: 100%;
+.long-form h5 {
+  font-size: var(--font-size-small);
+}
+
+.long-form h6 {
+  font-size: var(--font-size-smaller);
+  text-transform: uppercase;
+  letter-spacing: .0375em;
+}
+
+.long-form p {
+  line-height: 1.65;
+  padding-bottom: 24px;
+  font-family: 'Recife Text';
+  letter-spacing: 0;
+}
+
+.long-form ul {
+  margin-bottom: 32px;
+}
+.long-form ul li {
+  margin-bottom: 4px;
+}
+
+.long-form img {
+  border-radius: 8px;
+  margin-top: 48px;
+  margin-bottom: 32px;
 }
 
 p.large {
-  font-size: 48px;
+  font-size: var(--font-size-large);
+  font-family: var(--font-family-sans);
+}
+p.small {
+  font-size: var(--font-size-smaller);
+  font-family: var(--font-family-sans);
+  letter-spacing: .0125em;
+}
+
+.long-form img {
+  max-width: 100%;
+  margin-bottom: 48px;
 }
