--- a/themes/blank/static/css/variables.css
+++ b/themes/blank/static/css/variables.css
@@ -1,15 +1,17 @@
 :root {
   
-  --font-base:           calc(.75rem + .625vw);                  /* 21.2px  */ 
+  --font-base:           24px;                 
   
-  --font-size-display:   calc(2rem + 3vw);
-  --font-size-huge:      calc(var(--font-size-largest) * 1.5);
-  --font-size-largest:   calc(var(--font-size-larger) * 1.5);  
-  --font-size-larger:    calc(var(--font-size-large) * 1.375);   /* 26.50px */
-  --font-size-large:     calc(var(--font-size-medium) * 1.25); /* 23.85px */ 
-  --font-size-medium:    calc(var(--font-base) * 1);            /* 21.2px  */ 
+  --font-size-display:   calc(var(--font-base) * 3.5);  /* page-title */  
+  --font-size-huge:      calc(var(--font-base) * 3.0);  /* h1 */
+  --font-size-largest:   calc(var(--font-base) * 2.4);  /* h2 */
+  --font-size-larger:    calc(var(--font-base) * 1.8);  /* h3 */
+  --font-size-large:     calc(var(--font-base) * 1.4);  /* h4 */
+  
+  --font-size-medium:    calc(var(--font-base) * 1);    /* p  */
+  
   --font-size-small:     calc(var(--font-base) * 0.875);
-  --font-size-smaller:   calc(var(--font-size-small) * 0.875);
+  --font-size-smaller:   calc(var(--font-base) * 0.75);
   
   --font-size-bigtext:   calc(var(--font-size-largest) * 1.75);
   
