--- a/themes/blank/layouts/partials/header.html
+++ b/themes/blank/layouts/partials/header.html
@@ -1,14 +1,14 @@
-<header>
-	<a class="logo h-stack" href="{{ .Site.BaseURL }}">
-    <img class="profile" src="{{ .Site.BaseURL }}img/avatar.png">
+<header class="flex items-center gap-2">
+	<a class="logo" href="{{ .Site.BaseURL }}">
+    <img class="w-8 rounded-full border border-white" src="{{ .Site.BaseURL }}img/avatar.png">
     <!-- {{ .Site.Title }} -->
   </a>
 
-  <ul class="site-nav">
+  <ul class="flex gap-2">
     {{ $currentPage := . }}
     {{ range .Site.Menus.main }}  
-    <li >
-      <a class="{{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}active{{ end }}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
+    <li>
+      <a class="p-2 px-4 text-base bg-white bg-opacity-5 hover:bg-opacity-25 transition ease-in-out duration-100 rounded-full {{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}active{{ end }}" href="{{ .URL }}" title="{{ .Title }}">{{ .Name }}</a>
     </li>
     {{ end }}
   </ul>
