--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,6 +1,6 @@
-<article>
+<article class="flex flex-col sm:flex-row py-8 border-t border-white border-opacity-5">
   
-  <div class="meta">
+  <div class="meta min-w-48 mb-4">
 	  <time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
   </div>
   
