--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,5 +1,7 @@
 <div class="hero">
-  <h1>Hello, I'm Jitachi. <br>
-  Software Designer at <a href="http://railway.app">Railway.</a><br>
-  Curious and stubborn.</h1>
+  <h1>
+    Hello, I'm Jitachi. <br />
+    Software Designer at <a href="http://railway.app">Railway.</a> Curious and
+    stubborn.
+  </h1>
 </div>
