--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 body {
   max-width: 1320px;
   margin: 0 auto;
-  padding: 64px;
+  /* padding: 64px; */
   font-family: var(--font-family-sans);
   font-size: var(--font-base);
   line-height: 1.55;
@@ -55,7 +55,7 @@ a { color: white; }
 }
 */
 
-header li a.active {
+header a.active {
   background-color: hsla(0, 0%, 100%, .75);
   color: #16161D;
 } 
@@ -66,11 +66,11 @@ time {
   font-size: 18px;
 }
 
-header, main { margin-bottom: 160px; }
+header, main, .hero, .long-form h1 { margin-bottom: calc(10vw + 4rem); }
 
 /* Homepage Listing */
 
-article {
+/* article {
   margin-bottom: 32px;
   padding-top: 32px;
   border-top: solid 1px hsla(0, 100%, 100%, .1);
@@ -88,7 +88,7 @@ article h3 a {
 
 article img {
   margin-top: 24px;
-}
+} */
 
 /* Single Page */
 
@@ -99,8 +99,6 @@ article img {
 .page-title h1 {
   margin-bottom: 16px;
 }
-
-.hero, .long-form h1 { margin-bottom: 160px; }
 
 hr {
   border: none;
@@ -131,10 +129,11 @@ hr {
 }
 
 h1 {
-  font-size: var(--font-size-display);
+  font-size: clamp(2rem, 4vw + 1rem, 5rem);
   font-weight: 700;
   line-height: 112.5%;
   letter-spacing: -.0375em;
+  max-width: 26ch;
 }
 
 .long-form h2 {
@@ -184,6 +183,10 @@ h1 {
 {
   margin-top: 4px;
   margin-bottom: 4px;
+}
+
+.long-form li {
+  list-style: disc;
 }
 
 .long-form p.large {
