--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
 		{{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
 	{{- end }}
 </head>
-<body class="p-12">
+<body class="p-8 md:p-12">
 	{{ partial "header" . }}
 	{{ block "main" . }}{{ end }}
 	<!-- {{ partial "footer" . }} -->
