reduced content in about, moved work to template hardcoded content

--- a/themes/blank/layouts/_default/work.html
+++ b/themes/blank/layouts/_default/work.html
@@ -2,6 +2,9 @@
 
 <div class="container">
   {{ .Content }}
+
+  <h2 class="mb-8">Railway</h2>
+  <img class="rounded-lg" src="{{ .Site.BaseURL }}work/railway.png" />
 </div>
 
 {{ end }}
