--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,11 +1,12 @@
-<article class="flex flex-col sm:flex-row py-8 border-t border-white border-opacity-5">
+<a href="{{ .Permalink }}">
+  <article class="flex flex-col sm:flex-row py-8 border-t border-white border-opacity-5 hover:pl-8 transition-all">
   
   <div class="meta min-w-48 mb-4">
 	  <time datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
   </div>
   
   <div class="content">
-    <h3><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
+    <h4>{{ .Title }}</h4>
     {{ range .Params.tags }}
 	  <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
 	  {{ end }}
@@ -20,4 +21,5 @@
     {{ end }}
   </div>
   
-</article>
+  </article>
+</a>
