--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,5 +1,5 @@
 <div class="hero px-[8vw] pt-[16vw] pb-[12vw]">
   <h1 class="max-w-[18ch]">
-    Hello, I'm Jitachi, software designer at Railway.
+    Hello, I'm Jitachi, software designer at Railway. This is a test.
   </h1>
 </div>
