--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,5 +1,5 @@
-<div class="hero px-[8vw] pt-[16vw] pb-[12vw]">
-  <h1 class="max-w-[18ch]">
-    Hello, I'm Jitachi, software designer at Railway.
-  </h1>
+<div class="hero px-[8vw] pt-[12vw] pb-[2vw]">
+  <p class="max-w-[45ch] text-2xl font-normal leading-tight">
+    Hello, I'm Jitachi, software designer at Railway.<br />
+  </p>
 </div>
