--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,11 +1,11 @@
 <li class="border border-white/5">
   <a href="{{ .Permalink }}">
     <article
-      class="flex flex-col sm:flex-row p-12  hover:bg-white/5 transition-all group relative rounded-md min-w-96"
+      class="flex flex-col sm:flex-row p-12  hover:bg-white/5 transition-all group relative rounded-md min-w-96 md:px-[8vw]"
     >
       <!-- <div class="absolute bottom-0 left-0 w-full h-32 bg-gradient-to-t from-[#16161d]"></div> -->
 
-      <div class="mx-auto max-w-[720px]">
+      <div class="min-w-[640px]">
         <p class="mt-4 mb-1 opacity-45 text-base">
           <time class="mono" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}"
             >{{ .Date.Format "Jan 2, 2006" }}</time
