--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -1,23 +1,31 @@
 :root {
-  --font-base: calc(16px + 0.375vw);
 
-  --font-size-display: calc(var(--font-base) * 4.5); /* page-title */
-  --font-size-huge: calc(var(--font-base) * 3); /* h1 */
-  --font-size-largest: calc(var(--font-base) * 2.5); /* h2 */
-  --font-size-larger: calc(var(--font-base) * 2); /* h3 */
-  --font-size-large: calc(var(--font-base) * 1.375); /* h4 */
+/* Font Sizing - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
-  --font-size-medium: calc(var(--font-base) * 1); /* p  */
+  --font-base: calc(16px + 0.25vw);
+
+  --font-size-display: calc(var(--font-base) * 4.5);             /* page-title */
+  --font-size-huge: calc(var(--font-base) * 3);                  /* h1 */
+  --font-size-largest: calc(var(--font-size-larger) * 1.1875);   /* h2 - 33.84px [^ 5.34px] */
+  --font-size-larger: calc(var(--font-size-large)   * 1.25);     /* h3 - 28.50px [^ 5.70px] */
+  --font-size-large: calc(var(--font-base)          * 1.125);    /* h4 - 22.80px [^ 2.53px] */
+
+  --font-size-medium: calc(var(--font-base) * 1);                /*  p ~ 20.27px */
 
   --font-size-small: calc(var(--font-base) * 1.125);
-  --font-size-smaller: calc(var(--font-base) * 0.875);
+
+  --font-size-smaller: calc(var(--font-base) * 0.75);
 
   --font-size-bigtext: calc(var(--font-size-largest) * 1.75);
+
+/* Line Height - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
   --line-height-xs: 1.125;
   --line-height-sm: 1.25;
   --line-height-md: 1.5;
   --line-height-lg: 1.65;
+
+/* Font -Family - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - */
 
   --font-family-serif: "Recife Text", serif;
   --font-family-sans: "Messina Sans", sans-serif;
