--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,5 +1,5 @@
-<div class="hero px-[8vw] pt-[12vw] pb-[2vw]">
+<div class="hero px-[8vw] pt-[12vw] pb-[8vw]">
   <p class="max-w-[45ch] text-2xl font-normal leading-tight">
-    Hello, I'm Jitachi, software designer at Railway.<br />
+    Hello, I'm Jitachi, software designer at Railway.
   </p>
 </div>
