--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,46 +1,7 @@
 @import url("type.css");
 @import url("variables.css");
 
-/* Josh's Custom CSS Reset https://www.joshwcomeau.com/css/custom-css-reset/ */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-* {
-  margin: 0;
-}
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  overflow-wrap: break-word;
-}
-#root,
-#__next {
-  isolation: isolate;
-}
+*,::after,::before{box-sizing:border-box}*{margin:0}body{line-height:1.5;-webkit-font-smoothing:antialiased}canvas,img,picture,svg,video{display:block;max-width:100%}button,input,select,textarea{font:inherit}h1,h2,h3,h4,h5,h6,p{overflow-wrap:break-word}p{text-wrap:pretty}h1,h2,h3,h4,h5,h6{text-wrap:balance}#__next,#root{isolation:isolate}
 
 body {
   /* max-width: 1320px; */
@@ -53,18 +14,9 @@ body {
   color: var(--color-foreground);
 }
 
-/* a {
-  color: white;
-} */
+header a.active { background-color: var(--color-bg-light); }
 
-header a.active {
-  background-color: hsla(0, 0%, 100%, 0.25);
-  color: #fff;
-}
-
-.mono {
-  font-family: "Jetbrains Mono";
-}
+.mono { font-family: "Jetbrains Mono"; }
 
 main,
 .long-form h1 {
@@ -92,6 +44,7 @@ article img {
 }
 
 /* .page-title */
+
 h1 {
   font-size: clamp(2rem, 6vw + 1rem, 6.25rem);
   margin-bottom: 16px;
@@ -102,8 +55,7 @@ h1 {
 
 hr {
   border: none;
-  border-top: 1px solid hsla(0, 100%, 100%, 0.15);
-  color: #999;
+  border-top: 1px solid var(--color-border-light);
   background-color: transparent;
   height: 1px;
   margin: 48px auto;
@@ -154,35 +106,38 @@ h6 {
 }
 
 .long-form h2 {
-  font-size: var(--font-size-larger);
-  margin-bottom: 0.675em;
+  font-size: var(--font-size-largest);
+  letter-spacing: -0.00625em;
+  font-weight: 600;
+  margin-top: 1.5em;
+  margin-bottom: .375em;
 }
 .long-form h3 {
   font-size: var(--font-size-larger);
-  margin-top: 32px;
-  margin-bottom: 20px;
+  letter-spacing: -0.00625em;
+  margin-top: 1.5em;
+  margin-bottom: .375em;
 }
 
 .long-form h4 {
   font-size: var(--font-size-large);
-  margin-top: 32px;
-  margin-bottom: 16px;
+  letter-spacing: -0.00625em;
+  margin-top: 1.5em;
+  margin-bottom: .375em;
 }
 
 .long-form p {
   font-family: var(--font-family-sans);
-  line-height: 1.65;
-  letter-spacing: 0;
-  margin-bottom: 16px;
+  letter-spacing: -0.00625em;
+  margin-bottom: 1em;
   opacity: 0.9;
 }
 
 .long-form h5 {
-  font-size: var(--font-size-small);
-  margin-top: 24px;
-  margin-bottom: 12px;
+  font-size: var(--font-base);
+  margin-top: 32px;
+  margin-bottom: 8px;
   font-weight: 600;
-  opacity: 0.45;
 }
 
 .long-form h6 {
@@ -190,8 +145,8 @@ h6 {
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 0.0375em;
-  margin-top: 48px;
-  margin-bottom: 12px;
+  margin-top: 2em;
+  margin-bottom: 1.125em;
 }
 
 .long-form ul,
@@ -212,10 +167,10 @@ h6 {
 }
 
 .long-form p.large {
-  font-size: var(--font-size-large);
+  font-size: var(--font-size-larger);
   font-family: var(--font-family-sans);
   line-height: 150%;
-  margin-bottom: 16px;
+  margin-bottom: .5em;
 }
 
 p.sans {
@@ -239,7 +194,7 @@ p.row {
   font-size: var(--font-size-large);
   max-width: 800px;
   padding-left: 24px;
-  border-left: 3px solid white;
+  border-left: 3px solid var(--color-foreground);
   margin: 32px auto;
 }
 
@@ -250,7 +205,7 @@ p.row {
 }
 
 .long-form p code {
-  background-color: hsla(0, 100%, 100%, 0.12);
+  background-color: var(--color-bg-lightest);
   padding: 6px 8px;
   border-radius: 8px;
   font-size: 87.5%;
@@ -274,7 +229,7 @@ p.row {
 }
 
 pre {
-  background-color: hsla(0, 100%, 100%, 0.05);
+  background-color: var(--color-bg-lightest);
   padding: 12px 20px;
   border-radius: 8px;
   font-size: 87.5%;
@@ -298,128 +253,12 @@ h5 + h4 {
   margin-bottom: 0px;
 }
 
-/* .js-toggle-wrapper {
-  display: table;
-}
-
-.js-toggle {
-  touch-action: pan-x;
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  background-color: transparent;
-  border: 0;
-  padding: 0;
-  -webkit-touch-callout: none;
-  user-select: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  -webkit-tap-highlight-color: transparent;
-}
-
-.js-toggle-screenreader-only {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
-
-.js-toggle-track {
-  width: 50px;
-  height: 24px;
-  padding: 0;
-  border-radius: 30px;
-  background-color: hsl(222, 14%, 7%);
-  transition: all 0.2s ease;
-}
-
-.js-toggle-track-check {
-  position: absolute;
-  width: 17px;
-  height: 17px;
-  left: 5px;
-  top: 0px;
-  bottom: 0px;
-  margin-top: auto;
-  margin-bottom: auto;
-  line-height: 0;
-  opacity: 0;
-  transition: opacity 0.25s ease;
-}
-
-.js-toggle--checked .js-toggle-track-check {
-  opacity: 1;
-  transition: opacity 0.25s ease;
-}
-
-.js-toggle-track-x {
-  position: absolute;
-  width: 17px;
-  height: 17px;
-  right: 5px;
-  top: 0px;
-  bottom: 0px;
-  margin-top: auto;
-  margin-bottom: auto;
-  line-height: 0;
-  opacity: 1;
-  transition: opacity 0.25s ease;
-}
-
-.js-toggle--checked .js-toggle-track-x {
-  opacity: 0;
-}
-
-.js-toggle-thumb {
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  width: 22px;
-  height: 22px;
-  border-radius: 50%;
-  background-color: #fafafa;
-  box-sizing: border-box;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-  transform: translateX(0);
-}
-
-.js-toggle--checked .js-toggle-thumb {
-  transform: translateX(26px);
-  border-color: #19ab27;
-}
-
-.js-toggle--focus .js-toggle-thumb {
-  box-shadow: 0px 0px 2px 3px rgb(255, 167, 196);
-}
-
-.js-toggle:active .js-toggle-thumb {
-  box-shadow: 0px 0px 5px 5px rgb(255, 167, 196);
-}
-
-body.light-mode,
-body.light-mode main * {
-  --color-background: #0eb64c;
-  --color-foreground: black;
-} */
-
-/* body.light {
-  background-color: #ffffff;
-  color: #000000;
-}
-body.dark {
-  background-color: #000000;
-  color: #ffffff;
-} */
-
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   body {
     background-color: red;
     color: #ffffff;
   }
-} */
+}
 
 body {
   /* background-color: #ffffff; */
@@ -435,11 +274,17 @@ body {
 body.light {
   --color-foreground: black;
   --color-background: white;
+  --color-bg-lightest:   hsla(0, 100%, 0%, 0.05);
+  --color-bg-light:      hsla(0, 100%, 0%, 0.1);
+  --color-border-light:  hsla(0, 100%, 0%, 0.1);
 }
 
 body.dark {
   --color-foreground: white;
   --color-background: #12121a;
+  --color-bg-lightest:   hsla(0, 100%, 100%, 0.05);
+  --color-bg-light:      hsla(0, 100%, 100%, 0.1);
+  --color-border-light:  hsla(0, 100%, 100%, 0.1);
 }
 
 /* Add basic styles for the icons */
