--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,22 +1,24 @@
-<li class="border border-white/5">
+<li class="border-t border-[var(--color-border-light)]">
   <a href="{{ .Permalink }}">
     <article
-      class="flex flex-col sm:flex-row p-12  hover:bg-white/5 transition-all group relative rounded-md min-w-96 md:px-[8vw]"
+      class="flex flex-col sm:flex-row p-8  hover:bg-[var(--color-bg-lightest)] transition-all group relative rounded-md min-w-96 md:px-[8vw]"
     >
       <!-- <div class="absolute bottom-0 left-0 w-full h-32 bg-gradient-to-t from-[#16161d]"></div> -->
 
-      <div class="min-w-[640px]">
+      <div class="mx-auto min-w-[640px]">
         <p class="mt-4 mb-1 opacity-45 text-base">
-          <time class="mono" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}"
+          <time
+            class="mono text-sm"
+            datetime="{{ .Date.Format "2006-01-02T15:04:05" }}"
             >{{ .Date.Format "Jan 2, 2006" }}</time
           >
         </p>
 
-        <h5 class="mb-1 tracking-tight group-hover:underline">{{ .Title }}</h5>
+        <h3 class="mb-1 tracking-tight group-hover:underline">{{ .Title }}</h5>
         <!-- {{ range .Params.tags }}
           <a href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
         {{ end }} -->
-        <p class="opacity-45 mb-8 max-w-xl">
+        <p class="opacity-45 mb-4 max-w-xl">
           {{ .Summary }}
           {{ if .Truncated }}
             <a href="{{ .Permalink }}">Read more...</a>
